# NCAA-Rust2

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  config.yaml  feature_branch_log.txt  score.rs  scratch  scratch_stddev
guitest/: Cargo.toml
src/: anneal.rs  api.rs  bracket.rs  config.rs  elo.rs  ga.rs  game_result.rs  genetic.rs  ingest.rs  main.rs  main.rs1  main.rs_gene_pool  main.rs_gene_pool_ev  main_old.rs  pool.rs  portfolio.rs
