[package]
name = "ncaa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
indicatif = "0.16.2"
rand = "0.8.5"
num_cpus = "1.13.1"
fnv = "1.0.7"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9"
rayon = "1.7.0"
pyo3 = "0.19.0"

# New dependencies for ELO calculation from live data
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
